k8s/applications/automation/frigate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
