k8s/applications/automation/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/part-of: automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frigate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frigate
    spec:
      hostIPC: false
      hostPID: false
      hostNetwork: false
      securityContext:
        fsGroup: 500
        runAsGroup: 500
        runAsNonRoot: true
        runAsUser: 500
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.17.0-tensorrt
          ports:
            - containerPort: 5000
              name: http
            - containerPort: 1935
              name: rtmp
            - containerPort: 8554
              name: rtsp
            - containerPort: 8555
              name: webrtc
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          volumeMounts:
            - mountPath: /config/config.yaml
              name: frigate-cm
              readOnly: true
              subPath: config.yaml
            - mountPath: /etc/s6-overlay/s6-rc.d/log-prepare/run
              name: frigate-cm-executable
              readOnly: true
              subPath: run
            - mountPath: /package/admin/s6/command/s6-applyuidgid
              name: frigate-cm-executable
              readOnly: true
              subPath: s6-applyuidgid
            - mountPath: /usr/local/nginx
              name: nginx
            - mountPath: /dev/shm
              name: shm
            - mountPath: /tmp/cache
              name: cache
            - mountPath: /run
              name: run
            - mountPath: /etc/letsencrypt
              name: letsencrypt
            - mountPath: /tmp/home
              name: home
            - mountPath: /media/frigate
              name: frigate-media
            - mountPath: /config
              name: frigate-config
          resources:
            requests:
              cpu: '500m'
              memory: '2Gi'
            limits:
              cpu: '1500m'
              memory: '4Gi'
      volumes:
        - emptyDir:
            medium: Memory
          name: shm
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: cache
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: run
        - emptyDir: {}
          name: letsencrypt
        - emptyDir: {}
          name: home
        - emptyDir: {}
          name: nginx
        - configMap:
            name: frigate-cm
          name: frigate-cm
        - configMap:
            defaultMode: 365
            items:
              - key: run
                path: run
              - key: s6-applyuidgid
                path: s6-applyuidgid
            name: frigate-cm
          name: frigate-cm-executable
        - name: frigate-media
          persistentVolumeClaim:
            claimName: frigate-media
        - name: frigate-config
          persistentVolumeClaim:
            claimName: frigate-config
