k8s/applications/automation/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/part-of: automation
spec:
  selector:
    app.kubernetes.io/name: frigate
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  - name: rtmp
    port: 1935
    targetPort: 1935
  - name: rtsp
    port: 8554
    targetPort: 8554
  - name: webrtc-tcp
    port: 8555
    targetPort: 8555
    protocol: TCP
  - name: webrtc-udp
    port: 8555
    targetPort: 8555
    protocol: UDP
